@@ -7,6 +7,11 @@ Here is a history of user visible changes to Mailman.
 
 2.1.16 (xx-xxx-xxxx)
 
+  New Features
+
+    - IncomingRunner now logs rejected messages to the vette log.
+      (LP: 1068837)
+
   i18n
 
     - Corrected typo in templates/it/private.html.
